# memsync

./: .coverage  .gitignore  ARCHITECTURE.md  CLAUDE.md  COMMANDS.md  CONTRIBUTING.md  DAEMON_CONFIG.md  DAEMON_PITFALLS.md  EXISTING_CODE.md  LICENSE  PITFALLS.md  README.md  REPO.md  prospect_research.md  pyproject.toml  user_message.txt
.claude/: settings.local.json
.claude/worktrees/zealous-hertz/: CONFIG.md  DAEMON.md  DAEMON_CONFIG.md  PITFALLS.md  PROVIDERS.md  README.md  REPO.md  STYLE.md  pyproject.toml
.claude/worktrees/zealous-hertz/.github/ISSUE_TEMPLATE/: provider_request.md
.claude/worktrees/zealous-hertz/.github/workflows/: ci.yml  release.yml
.claude/worktrees/zealous-hertz/docs/: getting-started.md  global-memory-guide.md
.claude/worktrees/zealous-hertz/memsync/: backups.py  claude_md.py  cli.py  config.py  harvest.py  sync.py
.claude/worktrees/zealous-hertz/memsync/daemon/: __init__.py  capture.py  digest.py  notify.py  scheduler.py
.claude/worktrees/zealous-hertz/memsync/providers/: custom.py  gdrive.py  onedrive.py
.claude/worktrees/zealous-hertz/tests/: conftest.py  test_cli.py  test_config.py  test_daemon_capture.py  test_daemon_scheduler.py  test_daemon_watchdog.py  test_harvest.py  test_sync.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: DAEMON_SETUP.md  adding-a-provider.md  getting-started.md  orchestrator-build-checklist-2026-04-15.md  orchestrator-decision-spec-2026-04-15.md  orchestrator-implementation-plan-2026-04-15.md
docs/review/: codex-handoff-2026-04-15.md
memsync/: cli.py  config.py  harvest.py  journal.py  llm.py  sync.py  usage.py
memsync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
memsync/daemon/: digest.py  scheduler.py  service.py  watchdog.py  web.py
memsync/providers/: __init__.py  icloud.py
scripts/: run-orchestrated.mjs
tests/: test_backups.py  test_claude_md.py  test_cli.py  test_daemon_digest.py  test_daemon_notify.py  test_daemon_web.py  test_harvest.py  test_providers.py  test_sync.py  test_usage.py
tmp/run-1776378228429/: orchestration.json
tools/: claude-session-extract.bookmarklet.txt  claude-session-extract.js  install-bookmarklet.html
